--- a/view/frontend/templates/component/hero_carousel.phtml
+++ b/view/frontend/templates/component/hero_carousel.phtml
@@ -15,7 +15,7 @@ if ($componentConfiguration['mobileDisplayVariant']['id'] == 'list') {
 }
 
 ?>
-<div class="cs-container cs-container--edge-to-edge cs-container--noscroll ">
+<div class="cs-container cs-container--hero">
     <div class="cs-container__inner">
         <div class="<?=$block->getVisibilityClass()?>">
             <div class="cs-hero <?= $mobileDisplayVariantClass ?> cs-hero--centered">
