--- a/view/frontend/templates/component/paragraph.phtml
+++ b/view/frontend/templates/component/paragraph.phtml
@@ -5,8 +5,12 @@ $componentConfiguration = $block->getData();
 /** @var \MageSuite\ContentConstructorFrontend\Model\Component\Paragraph $viewModel */
 $viewModel = $block->getViewModel();
 ?>
-<div class="<?=$block->getVisibilityClass()?>">
-    <div class="cs-paragraph cs-paragraph--cols-<?=$viewModel->getColumns()?> cs-paragraph--mode-<?=$componentConfiguration['scenarios']['reading']['id'] ?? ''?> | cs-cms-block">
-        <?=$viewModel->getContent()?>
+<div class="cs-container cs-container--paragraph">
+    <div class="cs-container__inner">
+        <div class="<?=$block->getVisibilityClass()?>">
+            <div class="cs-paragraph cs-paragraph--cols-<?=$viewModel->getColumns()?> cs-paragraph--mode-<?=$componentConfiguration['scenarios']['reading']['id'] ?? ''?> | cs-cms-block">
+                <?=$viewModel->getContent()?>
+            </div>
+        </div>
     </div>
 </div>
