--- a/view/frontend/templates/component/product_finder.phtml
+++ b/view/frontend/templates/component/product_finder.phtml
@@ -7,56 +7,60 @@ $viewModel = $block->getViewModel();
 $steps = $viewModel->getSteps();
 $i = 0;
 ?>
-<div class="<?=$block->getVisibilityClass()?>">
-    <div class="cs-product-finder">
-        <?php foreach($steps as $step): ?>
-        <?php
+<div class="cs-container cs-container--product-finder">
+    <div class="cs-container__inner">
+        <div class="<?=$block->getVisibilityClass()?>">
+            <div class="cs-product-finder">
+                <?php foreach($steps as $step): ?>
+                <?php
 
-         $stepOptionsPerRow = array_merge($viewModel->getData('optionsPerRow'), isset($step['optionsPerRow']) ? $step['optionsPerRow'] : []);
-         $stepClasses = [];
+                 $stepOptionsPerRow = array_merge($viewModel->getData('optionsPerRow'), isset($step['optionsPerRow']) ? $step['optionsPerRow'] : []);
+                 $stepClasses = [];
 
-         $stepClasses[] = "cs-product-finder__step--options-mobile_".$stepOptionsPerRow['mobile'];
-         $stepClasses[] = "cs-product-finder__step--options-tablet_".$stepOptionsPerRow['mobile'];
-         $stepClasses[] = " cs-product-finder__step--options-desktop_".$stepOptionsPerRow['desktop'];
+                 $stepClasses[] = "cs-product-finder__step--options-mobile_".$stepOptionsPerRow['mobile'];
+                 $stepClasses[] = "cs-product-finder__step--options-tablet_".$stepOptionsPerRow['mobile'];
+                 $stepClasses[] = " cs-product-finder__step--options-desktop_".$stepOptionsPerRow['desktop'];
 
-         if($i == 0) {
-             $stepClasses[] = 'cs-product-finder__step--current';
-         }
-        ?>
-        <article
-            class="cs-product-finder__step <?=implode(' ', $stepClasses)?>"
-            data-step-id="<?=$step['id']?>"
-        >
-            <header class="cs-product-finder__step-header">
-                <div class="cs-product-finder__step-title"><?=$step['title']?></div>
-                <p class="cs-product-finder__step-description"><?=$step['description']?></p>
-            </header>
-            <div class="cs-product-finder__step-options">
-                <?php foreach($step['options'] as $option): ?>
-                <div
-                    class="cs-product-finder__step-option"
-                    data-next-step-id="<?=isset($option['next_step']) ? $option['next_step'] : '' ?>"
-                    data-attributes='<?=json_encode($option['attributes'])?>'
-                    data-category-id='<?=isset($option['category_id']) ? $option['category_id'] : '' ?>'
-                    data-category-only='<?=isset($option['category_only']) ? $option['category_only'] : '' ?>'
+                 if($i == 0) {
+                     $stepClasses[] = 'cs-product-finder__step--current';
+                 }
+                ?>
+                <article
+                    class="cs-product-finder__step <?=implode(' ', $stepClasses)?>"
+                    data-step-id="<?=$step['id']?>"
                 >
-                    <div class="cs-product-finder__option-sizer"></div>
-                    <div class="cs-product-finder__option-content">
-                        <?php if($option['image']): ?>
-                        <img class="cs-product-finder__option-image" src="<?=$option['image']?>">
-                        <?php endif; ?>
-                        <?php if($option['label']): ?>
-                        <p class="cs-product-finder__option-label"><?=$option['label']?></p>
-                        <?php endif; ?>
+                    <header class="cs-product-finder__step-header">
+                        <div class="cs-product-finder__step-title"><?=$step['title']?></div>
+                        <p class="cs-product-finder__step-description"><?=$step['description']?></p>
+                    </header>
+                    <div class="cs-product-finder__step-options">
+                        <?php foreach($step['options'] as $option): ?>
+                        <div
+                            class="cs-product-finder__step-option"
+                            data-next-step-id="<?=isset($option['next_step']) ? $option['next_step'] : '' ?>"
+                            data-attributes='<?=json_encode($option['attributes'])?>'
+                            data-category-id='<?=isset($option['category_id']) ? $option['category_id'] : '' ?>'
+                            data-category-only='<?=isset($option['category_only']) ? $option['category_only'] : '' ?>'
+                        >
+                            <div class="cs-product-finder__option-sizer"></div>
+                            <div class="cs-product-finder__option-content">
+                                <?php if($option['image']): ?>
+                                <img class="cs-product-finder__option-image" src="<?=$option['image']?>">
+                                <?php endif; ?>
+                                <?php if($option['label']): ?>
+                                <p class="cs-product-finder__option-label"><?=$option['label']?></p>
+                                <?php endif; ?>
+                            </div>
+                        </div>
+                        <?php endforeach; ?>
                     </div>
-                </div>
+                    <button class="cs-product-finder__back-button"><?=__("Go to previous step")?></button>
+                </article>
+                <?php $i++; ?>
                 <?php endforeach; ?>
+                <button class="cs-product-finder__back-button"><?=__("Go to previous step")?></button>
+                <form class="cs-product-finder__form" method="post" action="<?=$viewModel->getRedirectEndpointUrl()?>"></form>
             </div>
-            <button class="cs-product-finder__back-button"><?=__("Go to previous step")?></button>
-        </article>
-        <?php $i++; ?>
-        <?php endforeach; ?>
-        <button class="cs-product-finder__back-button"><?=__("Go to previous step")?></button>
-        <form class="cs-product-finder__form" method="post" action="<?=$viewModel->getRedirectEndpointUrl()?>"></form>
+        </div>
     </div>
 </div>
