--- a/view/frontend/templates/component/separator.phtml
+++ b/view/frontend/templates/component/separator.phtml
@@ -1,5 +1,9 @@
 <?php /** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\Separator */ ?>
-<div class="<?=$block->getVisibilityClass()?>">
-    <hr class="cs-separator">
+<div class="cs-container cs-container--separator">
+    <div class="cs-container__inner">
+        <div class="<?=$block->getVisibilityClass()?>">
+            <hr class="cs-separator">
+        </div>
+    </div>
 </div>
 
