--- a/view/frontend/templates/component/brand_carousel.phtml
+++ b/view/frontend/templates/component/brand_carousel.phtml
@@ -7,10 +7,10 @@ $viewModel = $block->getViewModel();
 
 $brands = $viewModel->getBrands();
 ?>
-<section class="cs-container">
+<div class="cs-container cs-container--brand-carousel">
     <div class="cs-container__inner">
         <div class="<?=$block->getVisibilityClass()?>">
-            <div class="cs-brand-carousel {{ mix }}">
+            <div class="cs-brand-carousel">
                 <div class="cs-brand-carousel__carousel">
                     <div class="cs-brand-carousel__wrapper">
                         <ul class="cs-brand-carousel__slides">
@@ -68,4 +68,4 @@ $brands = $viewModel->getBrands();
             </div>
         </div>
     </div>
-</section>
+</div>
