--- a/view/frontend/templates/component/category_links.phtml
+++ b/view/frontend/templates/component/category_links.phtml
@@ -7,44 +7,48 @@ $subCategories = $categories['sub_categories'];
 $shouldShowProductsCount = $viewModel->shouldShowProductsCount();
 
 ?>
-<div class="<?=$block->getVisibilityClass()?>">
-    <div class="cs-category-links <?php if(!$viewModel->hasSubcategories()): ?>cs-category-links--no-subcats <?php endif; ?>" data-mage-init='{"collapsible":{"mediaQueryScope":"(max-width: 767px)"}}'>
-        <h2 class="cs-category-links__title"><?= $categories['main_category']['name'] ?></h2>
+<div class="cs-container cs-container--category-links">
+    <div class="cs-container__inner">
+        <div class="<?=$block->getVisibilityClass()?>">
+            <div class="cs-category-links <?php if(!$viewModel->hasSubcategories()): ?>cs-category-links--no-subcats <?php endif; ?>" data-mage-init='{"collapsible":{"mediaQueryScope":"(max-width: 767px)"}}'>
+                <h2 class="cs-category-links__title"><?= $categories['main_category']['name'] ?></h2>
 
-        <div class="cs-category-links__dropdown cs-category-links-dropdown <?php if(!$viewModel->hasSubcategories()): ?> cs-category-links-dropdown--no-subcats <?php endif; ?>">
-            <?php
-            if($viewModel->hasSubcategories()): ?>
-            <div class="cs-category-links__subtitle | cs-category-links-dropdown__trigger" data-role="title">
-                <?=__('All Products')?> <?php if($shouldShowProductsCount): ?><span class="cs-category-links__qty"><?=$categories['main_category']['products_count']?></span><?php endif; ?>
-            </div>
-            <?php endif; ?>
+                <div class="cs-category-links__dropdown cs-category-links-dropdown <?php if(!$viewModel->hasSubcategories()): ?> cs-category-links-dropdown--no-subcats <?php endif; ?>">
+                    <?php
+                    if($viewModel->hasSubcategories()): ?>
+                    <div class="cs-category-links__subtitle | cs-category-links-dropdown__trigger" data-role="title">
+                        <?=__('All Products')?> <?php if($shouldShowProductsCount): ?><span class="cs-category-links__qty"><?=$categories['main_category']['products_count']?></span><?php endif; ?>
+                    </div>
+                    <?php endif; ?>
 
 
-            <div class="cs-category-links__list-wrapper | cs-category-links-dropdown__content" data-role="content">
-                <?php if($viewModel->hasSubcategories()): ?>
-                <ul class="cs-category-links__list">
-                    <?php foreach($subCategories as $category): ?>
-                    <?php $i = 0; ?>
-                    <li class="cs-category-links__list-item <?php if($i >= 5): ?>cs-hide-tablet<?php endif; ?>">
-                        <a href="<?=$category['url']?>" class="cs-category-links__link">
-                            <?=$category['name']?> <?php if($shouldShowProductsCount): ?><span class="cs-category-links__qty"><?=$category['products_count']?></span><?php endif; ?>
-                        </a>
-                    </li>
-                    <?php $i++; ?>
-                    <?php endforeach; ?>
-                </ul>
-                <?php endif; ?>
+                    <div class="cs-category-links__list-wrapper | cs-category-links-dropdown__content" data-role="content">
+                        <?php if($viewModel->hasSubcategories()): ?>
+                        <ul class="cs-category-links__list">
+                            <?php foreach($subCategories as $category): ?>
+                            <?php $i = 0; ?>
+                            <li class="cs-category-links__list-item <?php if($i >= 5): ?>cs-hide-tablet<?php endif; ?>">
+                                <a href="<?=$category['url']?>" class="cs-category-links__link">
+                                    <?=$category['name']?> <?php if($shouldShowProductsCount): ?><span class="cs-category-links__qty"><?=$category['products_count']?></span><?php endif; ?>
+                                </a>
+                            </li>
+                            <?php $i++; ?>
+                            <?php endforeach; ?>
+                        </ul>
+                        <?php endif; ?>
 
-                <ul class="cs-category-links__list-all">
-                    <li class="cs-category-links__list-all-item">
-                        <a href="<?=$categories['main_category']['url']?>" class="cs-category-links__link">
-                            <?= __('All Products') ?> <?php if($shouldShowProductsCount): ?> <span class="cs-category-links__qty"><?=$categories['main_category']['products_count']?></span><?php endif; ?>
-                            <svg class="cs-category-links__list-all-icon">
-                                <use xlink:href="#icon_arrow-right"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+                        <ul class="cs-category-links__list-all">
+                            <li class="cs-category-links__list-all-item">
+                                <a href="<?=$categories['main_category']['url']?>" class="cs-category-links__link">
+                                    <?= __('All Products') ?> <?php if($shouldShowProductsCount): ?> <span class="cs-category-links__qty"><?=$categories['main_category']['products_count']?></span><?php endif; ?>
+                                    <svg class="cs-category-links__list-all-icon">
+                                        <use xlink:href="#icon_arrow-right"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
